overflow issues v.3

--- a/src/App.css
+++ b/src/App.css
@@ -26,12 +26,14 @@
 }
 :root {
   top: 0;
+  background-color: #1f1f1f;
 }
 body{
   border: 0;
   top: 0;
   background-color: rgb(24, 24, 24);
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 @media (prefers-reduced-motion: no-preference) {
